--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,13 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   path:
   flutter_svg: ^0.20.0-nullsafety.3
   sqflite: ^2.0.0-nullsafety.2
+  floor: ^1.3.0
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +48,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  floor_generator: ^1.3.0
+  build_runner: ^2.1.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
